--- a/index.html
+++ b/index.html
@@ -2,10 +2,16 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>admin-portfolio</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link href="https://fonts.googleapis.com/css?family=Roboto:400,500" rel="stylesheet">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/7.0.0/normalize.min.css" />
+  <title>admin-portfolio</title>
+  <script src="/dist/styles.bundle.js"></script>
   </head>
   <body>
-    <div id="app"></div>
-    <script src="/dist/build.js"></script>
+    <div class="wrapper">
+      <div id="app"></div>
+    </div>
+    <script src="/dist/entry.bundle.js"></script>
   </body>
 </html>
